<resources>
    <string name="app_name">Estados</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_correo">Campo para ingresar su correo</string>
    <string name="msg_clave">Campo para ingresar su contraseña</string>
    <string name="msg_btLogin">Boton para hacer login al app</string>
    <string name="msg_btRegister">Boton para registrarse al app</string>
    <string name="msg_fallo_registro">Fallo el registro del usuario</string>
    <string name="msg_fallo_login">Fallo el login del usuario</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_estado">Estados</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_estado_add">Estado</string>
    <string name="msg_capital_add">Capital</string>
    <string name="msg_poblacion_add">Poblacion</string>
    <string name="msg_costas_add">Costas</string>
    <string name="msg_estados_add">Estado agregado</string>
    <string name="msg_estado_update">Estado actualizado</string>
    <string name="msg_estado_delete">Estado eliminado</string>

    <string name="bt_add_estado">Agregar estado</string>
    <string name="bt_update_estado">Actualizar estado</string>
    <string name="menu_delete">Eliminar estado</string>
    <string name="msg_seguroBorrar">"Estas seguro de eliminar "</string>
    <string name="no">No</string>
    <string name="si">Si</string>
</resources>